--- a/app/src/main/res/layout/popup_notes.xml
+++ b/app/src/main/res/layout/popup_notes.xml
@@ -10,35 +10,62 @@
     <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:hint="Add your personal notes"
-    android:textSize="16sp"
+    android:text="Add your personal notes"
+    android:textColor="@color/Deepblue"
+    android:textSize="18sp"
     android:gravity="center"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
+        android:text="Title"
+        android:textColor="@color/black" />
 
     <EditText
         android:id="@+id/input_notes_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:textSize="14sp"
-        android:hint="Title"/>
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="58dp"
+        android:layout_marginEnd="30dp"
+        android:inputType="text"
+        android:maxLines="1"
+        android:textColor="@color/black" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="120dp"
+        android:text="Description"
+        android:textColor="@color/black" />
 
     <EditText
         android:id="@+id/input_notes_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="75dp"
-        android:textSize="14sp"
-        android:hint="Descrption"/>
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="138dp"
+        android:layout_marginEnd="30dp"
+        android:inputType="textMultiLine"
+        android:minLines="4"
+        android:isScrollContainer="true"
+        android:maxLines="4"
+        android:gravity="top|left"
+        android:textColor="@color/black" />
+
 
     <Button
         android:id="@+id/button_notes_save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_marginStart="80dp"
+        android:layout_marginTop="260dp"
         android:layout_marginEnd="80dp"
-        android:layout_marginTop="130dp"
         android:background="@drawable/ic_input_custom"
+        android:gravity="center"
         android:text="Save"
         android:textColor="@color/white" />
 
