--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,10 +12,19 @@
             android:id="@+id/nav_food"
             android:icon="@drawable/ic_dining_24"
             android:title="Food" />
+
         <item
             android:id="@+id/nav_notes"
             android:icon="@drawable/ic_baseline_sticky_note_2_24"
             android:title="Notes" />
+
+         <item
+            android:id="@+id/nav_detected"
+            android:icon="@drawable/ic_activities"
+            android:title="Activities" />
+
+
+
 
         <item android:title="Profile">
             <menu tools:showIn="navigation_view">
