--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,11 +15,33 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="ProgressBarStyle">
+        <item name="colorAccent">@color/Red</item>
+    </style>
+
+
+
     <style name="Theme.HealtyApplication.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="TextTitle" parent="Theme.AppCompat.Light">
+        <item name="android:textColor">@color/Deepblue</item>
+    </style>
+
+    <style name="SwitchModeCustom" parent="Theme.AppCompat.Light">
+        <!-- active thumb & track color (30% transparency) -->
+        <item name="colorControlActivated">@color/Red</item>
+
+        <!-- inactive thumb color -->
+        <item name="colorSwitchThumbNormal">#f1f1f1
+        </item>
+
+        <!-- inactive track color (30% transparency) -->
+        <item name="android:colorForeground">#42221f1f
+        </item>
+    </style>
 
     <style name="Theme.HealtyApplication.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
