--- a/app/src/main/res/layout/fragmment_food.xml
+++ b/app/src/main/res/layout/fragmment_food.xml
@@ -18,37 +18,243 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:orientation="vertical">
+
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                app:cardBackgroundColor="@color/Lightgrey"
-                app:cardCornerRadius="5dp">
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|center_horizontal"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:text="@string/app_name"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="5dp"
+                    android:textColor="@color/black"
+                    android:text="@string/textfoodexplain"/>
+
+
+                <EditText
+                    android:id="@+id/text_search"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:lines="1"
+                    android:padding="6dp"
+                    android:background="@drawable/custom_edittext"
+                    android:inputType="textEmailAddress"
+                    android:layout_marginTop="70dp" />
+
+                <Button
+                    android:id="@+id/button_searchfood"
+                    android:layout_marginTop="120dp"
+                    android:layout_width="200dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_input_custom"
+                    android:text="Search"
+                    android:textColor="@color/white"
+                    android:textSize="15sp" />
 
                 <TextView
+                    android:id="@+id/food_resp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|center_horizontal"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:text="@string/app_name"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:layout_marginTop="180dp"
+                    android:layout_marginBottom="20dp" />
 
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:stretchColumns="0,1"
+                    android:layout_marginTop="200dp">
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/Deepblue"
+                            android:textSize="16dp"
+                            android:layout_gravity="center"
+                            android:paddingBottom="5dp"
+                            android:text="Caracteristic" />
+
+                        <TextView
+
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/Deepblue"
+                            android:paddingBottom="5dp"
+                            android:layout_marginStart="10dp"
+                            android:textSize="16dp"
+                            android:text="Pourcentage" />
+                    </TableRow>
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black"
+                            android:paddingBottom="5dp"
+                            android:layout_marginStart="30dp"
+                            android:text="Name" />
+
+                        <TextView
+                            android:id="@+id/textName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="5dp" />
+                    </TableRow>
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="5dp"
+                            android:textColor="@color/black"
+                            android:layout_marginStart="30dp"
+                            android:text="Sugar (g)" />
+
+                        <TextView
+                            android:id="@+id/textSugar"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="5dp" />
+                    </TableRow>
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black"
+                            android:paddingBottom="5dp"
+                            android:layout_marginStart="30dp"
+                            android:text="Fiber (g)" />
+
+                        <TextView
+                            android:id="@+id/textFiber"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="5dp" />
+                    </TableRow>
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black"
+                            android:paddingBottom="5dp"
+                            android:layout_marginStart="30dp"
+                            android:text="Sodium (g)" />
+
+                        <TextView
+                            android:id="@+id/textSodium"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="5dp" />
+                    </TableRow>
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black"
+                            android:paddingBottom="5dp"
+                            android:layout_marginStart="30dp"
+                            android:text="Potassium (g)" />
+
+                        <TextView
+                            android:id="@+id/textPotassium"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="5dp" />
+                    </TableRow>
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black"
+                            android:paddingBottom="5dp"
+                            android:layout_marginStart="30dp"
+                            android:text="Calories" />
+
+                        <TextView
+                            android:id="@+id/textCalories"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="5dp" />
+                    </TableRow>
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black"
+                            android:paddingBottom="5dp"
+                            android:layout_marginStart="30dp"
+                            android:text="Protein" />
+
+                        <TextView
+                            android:id="@+id/textProtein"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="5dp" />
+                    </TableRow>
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black"
+                            android:layout_marginStart="30dp"
+                            android:paddingBottom="5dp"
+                            android:text="Fat Total (g)" />
+
+                        <TextView
+                            android:id="@+id/textFat"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="5dp"
+                             />
+                    </TableRow>
+
+                </TableLayout>
 
             </androidx.cardview.widget.CardView>
+
+
 
         </LinearLayout>
     </ScrollView>
