--- a/app/src/main/res/layout/notes_card.xml
+++ b/app/src/main/res/layout/notes_card.xml
@@ -3,14 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/Theme.HealtyApplication">
+    android:background="@color/Lightgrey">
 
         <TextView
             android:id="@+id/text_notes_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
             android:layout_marginTop="7dp"
+           android:layout_marginStart="20dp"
             android:layout_marginBottom="20dp"
             android:text="Title"
             android:textSize="15sp"
@@ -20,7 +20,7 @@
             android:id="@+id/text_notes_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="7dp"
             android:text="Descrption" />
